[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/wave_designer/node_designer/nodes/transforms/lowpass_node.gd" type="Script" id=1]
[ext_resource path="res://ui/widgets/accent_button.gd" type="Script" id=2]
[ext_resource path="res://ui/widgets/slider_slot.tscn" type="PackedScene" id=3]

[node name="LP" type="GraphNode"]
margin_right = 171.0
margin_bottom = 74.0
title = "NODE_LOWPASS_TITLE"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = true
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = true
slot/2/left_type = 1
slot/2/left_color = Color( 0, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = true
slot/3/left_type = 1
slot/3/left_color = Color( 0, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = true
slot/4/left_type = 1
slot/4/left_color = Color( 0, 1, 1, 1 )
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
slot/5/left_enabled = true
slot/5/left_type = 0
slot/5/left_color = Color( 1, 1, 1, 1 )
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color( 1, 1, 1, 1 )
slot/6/left_enabled = true
slot/6/left_type = 1
slot/6/left_color = Color( 0, 1, 1, 1 )
slot/6/right_enabled = false
slot/6/right_type = 0
slot/6/right_color = Color( 1, 1, 1, 1 )
slot/7/left_enabled = true
slot/7/left_type = 0
slot/7/left_color = Color( 1, 1, 1, 1 )
slot/7/right_enabled = false
slot/7/right_type = 0
slot/7/right_color = Color( 1, 1, 1, 1 )
slot/8/left_enabled = true
slot/8/left_type = 0
slot/8/left_color = Color( 1, 1, 1, 1 )
slot/8/right_enabled = false
slot/8/right_type = 0
slot/8/right_color = Color( 1, 1, 1, 1 )
slot/9/left_enabled = true
slot/9/left_type = 0
slot/9/left_color = Color( 1, 1, 1, 1 )
slot/9/right_enabled = false
slot/9/right_type = 0
slot/9/right_color = Color( 1, 1, 1, 1 )
slot/10/left_enabled = true
slot/10/left_type = 0
slot/10/left_color = Color( 1, 1, 1, 1 )
slot/10/right_enabled = false
slot/10/right_type = 0
slot/10/right_color = Color( 1, 1, 1, 1 )
slot/11/left_enabled = true
slot/11/left_type = 2
slot/11/left_color = Color( 0, 1, 0, 1 )
slot/11/right_enabled = false
slot/11/right_type = 0
slot/11/right_color = Color( 1, 1, 1, 1 )
slot/12/left_enabled = false
slot/12/left_type = 0
slot/12/left_color = Color( 1, 1, 1, 1 )
slot/12/right_enabled = false
slot/12/right_type = 0
slot/12/right_color = Color( 1, 1, 1, 1 )
slot/13/left_enabled = false
slot/13/left_type = 0
slot/13/left_color = Color( 1, 1, 1, 1 )
slot/13/right_enabled = false
slot/13/right_type = 0
slot/13/right_color = Color( 1, 1, 1, 1 )
slot/14/left_enabled = false
slot/14/left_type = 0
slot/14/left_color = Color( 1, 1, 1, 1 )
slot/14/right_enabled = false
slot/14/right_type = 0
slot/14/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
base_title = "NODE_LOWPASS_TITLE"

[node name="Output" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 249.0
margin_bottom = 38.0
hint_tooltip = "NODE_OUTPUT_PORT_TTIP"
mouse_filter = 1
text = "NODE_OUTPUT_PORT"
align = 2

[node name="Input" type="Label" parent="."]
margin_left = 16.0
margin_top = 39.0
margin_right = 249.0
margin_bottom = 53.0
hint_tooltip = "NODE_INPUT_PORT_TTIP"
mouse_filter = 1
text = "NODE_INPUT_PORT"

[node name="Cutoff" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 54.0
margin_right = 249.0
margin_bottom = 68.0
label = "NODE_CUTOFF_PORT"
tooltip = "NODE_CUTOFF_PORT_TTIP"
big_step = 16.0
huge_step = 32.0
_decimals = 0
min_value = 0.0
max_value = 32768.0
nullable = false

[node name="Attenuation" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 69.0
margin_right = 249.0
margin_bottom = 83.0
label = "NODE_ATTENUATION_PORT"
tooltip = "NODE_ATTENUATION_PORT_TTIP"
min_value = 0.0
value = 1.0
nullable = false

[node name="Resonance" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 84.0
margin_right = 249.0
margin_bottom = 98.0
label = "NODE_RESONANCE_PORT"
tooltip = "NODE_RESONANCE_PORT_TTIP"
min_value = 0.0
value = 1.0
clamp_hi = false
nullable = false

[node name="Mix" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 99.0
margin_right = 249.0
margin_bottom = 113.0
type = 9
label = "NODE_MIX_FACTOR_PORT"
tooltip = "NODE_MIX_FACTOR_PORT_TTIP"
value = 1.0
clamp_lo = false
clamp_hi = false
nullable = false

[node name="ClampMix" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 114.0
margin_right = 249.0
margin_bottom = 128.0
type = 10
label = "NODE_CLAMP_MIX_PORT"
tooltip = "NODE_CLAMP_MIX_PORT_TTIP"
min_value = 0.0
value = 1.0
nullable = false

[node name="Amplitude" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 129.0
margin_right = 249.0
margin_bottom = 143.0
type = 2
label = "NODE_AMPLITUDE_PORT"
tooltip = "NODE_AMPLITUDE_PORT_TTIP"
value = 1.0
clamp_lo = false
clamp_hi = false
nullable = false

[node name="Power" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 144.0
margin_right = 249.0
margin_bottom = 158.0
type = 4
label = "NODE_POWER_PORT"
tooltip = "NODE_POWER_PORT_TTIP"
big_step = 100.0
huge_step = 500.0
min_value = 0.0
max_value = 500.0
value = 1.0
clamp_hi = false
nullable = false

[node name="Decay" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 159.0
margin_right = 249.0
margin_bottom = 173.0
type = 5
label = "NODE_DECAY_PORT"
tooltip = "NODE_DECAY_PORT_TTIP"
min_value = 0.0
nullable = false

[node name="DCOffset" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 174.0
margin_right = 249.0
margin_bottom = 188.0
type = 6
label = "NODE_DC_OFFSET_PORT"
tooltip = "NODE_DC_OFFSET_PORT_TTIP"
clamp_lo = false
clamp_hi = false
nullable = false

[node name="Isolate" type="Button" parent="."]
margin_left = 16.0
margin_top = 189.0
margin_right = 249.0
margin_bottom = 209.0
hint_tooltip = "NODE_ISOLATE_PORT_TTIP"
toggle_mode = true
text = "NODE_ISOLATE_PORT"
script = ExtResource( 2 )

[node name="Steps" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 210.0
margin_right = 249.0
margin_bottom = 224.0
label = "NODE_STEPS_PORT"
tooltip = "NODE_STEPS_PORT_TTIP"
big_step = 4.0
huge_step = 8.0
_decimals = 0
min_value = 1.0
max_value = 256.0
value = 1.0
nullable = false

[node name="RangeFrom" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 225.0
margin_right = 249.0
margin_bottom = 239.0
type = 7
label = "NODE_RANGE_FROM_PORT"
tooltip = "NODE_RANGE_FROM_PORT_TTIP"
nullable = false

[node name="RangeLength" parent="." instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 240.0
margin_right = 249.0
margin_bottom = 254.0
type = 8
label = "NODE_RANGE_LEN_PORT"
tooltip = "NODE_RANGE_LEN_PORT_TTIP"
min_value = 0.0
value = 1.0
nullable = false

[connection signal="value_changed" from="Cutoff" to="." method="_on_Cutoff_value_changed"]
[connection signal="value_changed" from="Attenuation" to="." method="_on_Attenuation_value_changed"]
[connection signal="value_changed" from="Resonance" to="." method="_on_Resonance_value_changed"]
[connection signal="value_changed" from="Mix" to="." method="_on_Mix_value_changed"]
[connection signal="value_changed" from="ClampMix" to="." method="_on_ClampMix_value_changed"]
[connection signal="value_changed" from="Amplitude" to="." method="_on_Amplitude_value_changed"]
[connection signal="value_changed" from="Power" to="." method="_on_Power_value_changed"]
[connection signal="value_changed" from="Decay" to="." method="_on_Decay_value_changed"]
[connection signal="value_changed" from="DCOffset" to="." method="_on_DCOffset_value_changed"]
[connection signal="toggled" from="Isolate" to="." method="_on_Isolate_toggled"]
[connection signal="value_changed" from="Steps" to="." method="_on_Steps_value_changed"]
[connection signal="value_changed" from="RangeFrom" to="." method="_on_RangeFrom_value_changed"]
[connection signal="value_changed" from="RangeLength" to="." method="_on_RangeLength_value_changed"]
